# app.js
@@ -2,8 +2,13 @@ const express = require("express");
 const cors = require("cors");
 const app = express();
 const config = require("./config/cloud.config");
-const bookRoute = require("./routes/book.route");
-const jwt = require("jsonwebtoken");
+const errorHandler = require("./utils/errorHandler");
+
+// Routers
+const userRoute = require("./routes/user.route");
+const ticketRoute = require("./routes/ticket.route");
+const workOrderRoute = require("./routes/work-order.route");
+const notificationRoute = require("./routes/notification.route");
 
 app.use(cors());
 app.use(express.json());
@@ -12,11 +17,11 @@ app.use(express.urlencoded({ extended: true }));
 const db = require("./models");
 db.sequelize.sync();
 
-app.get("/", (_, res) => {
-  res.redirect(`${config.host}:${config.swagger.ui}`);
-});
-
-app.use("/api/books", bookRoute);
+app.use("/api/auth", userRoute);
+app.use("/api/ticket", ticketRoute);
+app.use("/api/wo", workOrderRoute);
+app.use("/api/notification", notificationRoute);
+app.use(errorHandler);
 
 app.listen(config.port, () =>
   console.log(`App listening on port ${config.host}:${config.port}!`)
